--- a/SistemaTickets/SistemaTickets/Web.config
+++ b/SistemaTickets/SistemaTickets/Web.config
@@ -53,6 +53,6 @@
 		</compilers>
 	</system.codedom>
 	<connectionStrings>
-		<add name="conexion_sistema_tickets" connectionString="Server=DESKTOP-UEAUTDG\SQLEXPRESS;Database=sistema_tickets;User Id=admin;Password=admin;" />
+		<add name="conexion_sistema_tickets" connectionString="Server=DESKTOP-05FID7K;Database=sistema_tickets;" />
 	</connectionStrings>
 </configuration>
